change \Omega to \bolsdsymbol{\omega}

--- a/body.tex
+++ b/body.tex
@@ -213,12 +213,12 @@ construction give an operator $\um{H}_0 + \um{W}$ with the correct eigenvalues
 and approximate eigenvectors. In practice we work in the real basis of the
 device region and calculate
 \begin{equation}
-    \um{W} = \um{S} \um{X} \um{\Omega}\um{X}^\dagger - \um{H}_0
+    \um{W} = \um{S} \um{X} \boldsymbol{\omega}\um{X}^\dagger - \um{H}_0
     \label{eq:capsdefX}
 \end{equation}
 in matrix form, where $\um{S}$ is the overlap or metric for the atomic
 orbital basis used to describe the system, $\um{X}$ is the matrix of the
-eigenvectors of the Hamiltonian $\um{H}_0$, and $\um{\Omega}$ is a
+eigenvectors of the Hamiltonian $\um{H}_0$, and $\boldsymbol{\omega}$ is a
 diagonal matrix with the eigenvalues $\omega_i$ calculated at
 $\lambda = 1$ along the diagonal.
 In practice, since the self-energiy is a property of the electrode only
