move macros to preamble, conform IOP guidelines

--- a/paper.tex
+++ b/paper.tex
@@ -11,14 +11,7 @@
 \usepackage{graphicx}
 \usepackage{acronym}
 \usepackage{cite}
-
-\begin{document}
-\author{Mark Szepieniec, Irene Yeriskin, J.C. Greer}
-\title{Quasiparticle Energies and Lifetimes in a Metallic Chain Model of A Tunnel Junction}
-
-\input{acronyms}
-
-\maketitle
+\usepackage{iopams}
 
 \newcommand{\um}[1]{\mathbf{#1}}
 \newcommand{\umm}[1]{$\um{#1}$}
@@ -27,6 +20,14 @@
 \newcommand{\bracket}[2]{\langle #1|#2 \rangle}
 \newcommand{\matel}[3]{\bra{#1} #2 \ket{#3}}
 \newcommand{\ai}{{\it ab~initio} }
+
+\begin{document}
+\author{Mark Szepieniec, Irene Yeriskin, J.C. Greer}
+\title{Quasiparticle Energies and Lifetimes in a Metallic Chain Model of A Tunnel Junction}
+
+\input{acronyms}
+
+\maketitle
 
 \begin{abstract}
 	\input{abstract}
