add landauer current plot
also, landauer reference, \dscf macro and figures/iv.eps

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1534,3 +1534,17 @@ author = "J.G. Muga and J.P. Palao and B. Navarro and I.L. Egusquiza"
   publisher = {American Physical Society}
 }
 
+@article{buttiker1986,
+  title = {Four-Terminal Phase-Coherent Conductance},
+  author = {B\"uttiker, M.},
+  journal = {Phys. Rev. Lett.},
+  volume = {57},
+  issue = {14},
+  pages = {1761--1764},
+  year = {1986},
+  month = {Oct},
+  doi = {10.1103/PhysRevLett.57.1761},
+  url = {http://link.aps.org/doi/10.1103/PhysRevLett.57.1761},
+  publisher = {American Physical Society}
+}
+
