--- a/paper.tex
+++ b/paper.tex
@@ -20,6 +20,7 @@
 \newcommand{\bracket}[2]{\langle #1|#2 \rangle}
 \newcommand{\matel}[3]{\bra{#1} #2 \ket{#3}}
 \newcommand{\ai}{{\it ab~initio} }
+\newcommand{\dscf}{$\Delta$SCF } 
 
 \begin{document}
 \author{Mark Szepieniec, Irene Yeriskin, J.C. Greer}
