cleaned figures/, renamed figs conform IOP rules

--- a/body.tex
+++ b/body.tex
@@ -82,7 +82,7 @@ construct the Hamiltonian matrix elements for the CI calculations.
 
 \begin{figure}
 	\begin{center}
-		\includegraphics[width=0.9\linewidth]{figures/chaincapdevice}
+		\includegraphics[width=0.9\linewidth]{figures/figure1}
 	\end{center}
 	\caption{Model system studied in this work. The molecule consists of
         20 Gold atoms, while the explicit electrode regions each consist of 24
@@ -257,7 +257,7 @@ interest which is the focus of our subsequent calculations.
 
 \begin{figure} 
 	\begin{center}
-		\includegraphics[width=0.9\linewidth]{figures/transdat.eps}
+		\includegraphics[width=0.9\linewidth]{figures/figure2a_2b}
 	\end{center}
 	\caption{Transmission through the chain junctions obtained in
 	         scattering calculations with a Green's functions formalism
@@ -307,7 +307,7 @@ within an accuracy required for our study.
 
 \begin{figure} 
 	\begin{center}
-		\includegraphics[width=0.9\linewidth]{figures/13evals}
+		\includegraphics[width=0.9\linewidth]{figures/figure3}
 	\end{center}
 	\caption{Comparison of transmission data obtained using a self-energy
 	(red) with Lorentzian broadened complex eigenvalues of $\um{H}_D + \um{W}$
@@ -520,7 +520,7 @@ bracketed by the Koopmans and \dscf values.
 
 \begin{figure}
 	\begin{center}
-		\includegraphics[width=0.9\linewidth]{figures/all45Ahomo.eps}
+		\includegraphics[width=0.9\linewidth]{figures/figure4a_4b}
 	\end{center}
 	\caption{HOMO region quasiparticle peaks of the 0.45 nm separated
 	         system, with excitations restricted to the `molecule' region,
@@ -532,7 +532,7 @@ bracketed by the Koopmans and \dscf values.
 
 \begin{figure}
 	\begin{center}
-		\includegraphics[width=0.9\linewidth]{figures/all45Alumo.eps}
+		\includegraphics[width=0.9\linewidth]{figures/figure5a_5b}
 	\end{center}
 	\caption{LUMO region quasiparticle peaks of the 0.45 nm separated
 	         system, with excitations restricted to the `molecule' region,
@@ -544,7 +544,7 @@ bracketed by the Koopmans and \dscf values.
 
 \begin{figure}
 	\begin{center}
-		\includegraphics[width=0.9\linewidth]{figures/all40Ahomo.eps}
+		\includegraphics[width=0.9\linewidth]{figures/figure6a_6b}
 	\end{center}
 	\caption{HOMO region quasiparticle peaks of the 0.40 nm separated
 	         system, with excitations restricted to the `molecule' region,
@@ -556,7 +556,7 @@ bracketed by the Koopmans and \dscf values.
 
 \begin{figure}
 	\begin{center}
-		\includegraphics[width=0.9\linewidth]{figures/all40Alumo.eps}
+		\includegraphics[width=0.9\linewidth]{figures/figure7a_7b}
 	\end{center}
 	\caption{LUMO region quasiparticle peaks of the 0.40 nm separated
 	         system, with excitations restricted to the `molecule' region,
@@ -635,7 +635,7 @@ by approximately 1 eV.
  
 \begin{figure}
 	\begin{center}
-		\includegraphics[width=0.9\linewidth]{figures/cidevregion.eps}
+		\includegraphics[width=0.9\linewidth]{figures/figure8a_8c}
 	\end{center}
 	\caption{CI results with inclusion of lead excitations for the
 	         0.45 (top) and 0.40 nm (middle) systems, with the Density
@@ -663,7 +663,7 @@ counterparts causes a different onset behavior.
 
 \begin{figure}
 	\begin{center}
-		\includegraphics[width=0.9\linewidth]{figures/iv.eps}
+		\includegraphics[width=0.9\linewidth]{figures/figure9a_9b}
 	\end{center}
 	\caption{Current versus voltage for the different transmission
 	         spectra discussed above, using the Landauer formula.
