add identifying info to top of paper.tex

--- a/paper.tex
+++ b/paper.tex
@@ -1,6 +1,6 @@
-%        File: paper.tex
-%     Created: Tue Feb 21 05:00  2012 G
-% Last Change: Tue Feb 21 05:00  2012 G
+% Author: Mark Szepieniec, Irene Yeriskin, J.C. Greer
+% Journal: IOP Nanotechnology
+% 
 %
 \documentclass[12pt]{iopart}
 %\documentclass[a4paper, twocolumn]{article}
