add comments to preamble macros

--- a/paper.tex
+++ b/paper.tex
@@ -13,14 +13,14 @@
 \usepackage{cite}
 \usepackage{iopams}
 
-\newcommand{\um}[1]{\mathbf{#1}}
-\newcommand{\umm}[1]{$\um{#1}$}
-\newcommand{\bra}[1]{\langle #1|}
-\newcommand{\ket}[1]{|#1 \rangle}
-\newcommand{\bracket}[2]{\langle #1|#2 \rangle}
-\newcommand{\matel}[3]{\bra{#1} #2 \ket{#3}}
+\newcommand{\um}[1]{\mathbf{#1}}   % for denoting matrices
+\newcommand{\umm}[1]{$\um{#1}$}    % for denoting matrices out of math mode
+\newcommand{\bra}[1]{\langle #1|}  % dirac bra
+\newcommand{\ket}[1]{|#1 \rangle}  % dirac ket
+\newcommand{\bracket}[2]{\langle #1|#2 \rangle}  % dirac bracket
+\newcommand{\matel}[3]{\bra{#1} #2 \ket{#3}}     % matrix element in brackets
 \newcommand{\ai}{{\it ab~initio} }
-\newcommand{\dscf}{$\Delta$SCF } 
+\newcommand{\dscf}{$\Delta$SCF }
 
 \begin{document}
 \author{Mark Szepieniec, Irene Yeriskin, J.C. Greer}
