remove second and subsequent caps from title

--- a/paper.tex
+++ b/paper.tex
@@ -24,7 +24,7 @@
 
 \begin{document}
 \author{Mark Szepieniec, Irene Yeriskin, J.C. Greer}
-\title{Quasiparticle Energies and Lifetimes in a Metallic Chain Model of A Tunnel Junction}
+\title{Quasiparticle energies and lifetimes in a metallic chain model of a tunnel junction}
 
 \input{acronyms}
 
