reformat author names; no periods, only initials

--- a/paper.tex
+++ b/paper.tex
@@ -23,8 +23,8 @@
 \newcommand{\dscf}{$\Delta$SCF }
 
 \begin{document}
-\author{Mark Szepieniec, Irene Yeriskin, J.C. Greer}
 \title{Quasiparticle energies and lifetimes in a metallic chain model of a tunnel junction}
+\author{M Szepieniec, I Yeriskin and J C  Greer}
 
 \input{acronyms}
 
