--- a/paper.tex
+++ b/paper.tex
@@ -25,6 +25,7 @@
 \begin{document}
 \title{Quasiparticle energies and lifetimes in a metallic chain model of a tunnel junction}
 \author{M Szepieniec, I Yeriskin and J C  Greer}
+\address{Tyndall National Institute, University College Cork, Cork, Ireland}
 
 \input{acronyms}
 
