--- a/paper.tex
+++ b/paper.tex
@@ -26,6 +26,7 @@
 \title{Quasiparticle energies and lifetimes in a metallic chain model of a tunnel junction}
 \author{M Szepieniec, I Yeriskin and J C  Greer}
 \address{Tyndall National Institute, University College Cork, Cork, Ireland}
+\ead{mark.szepieniec@tyndall.ie}
 
 \input{acronyms}
 
