rewrote abstract, added \acresetall to paper.tex

--- a/paper.tex
+++ b/paper.tex
@@ -32,6 +32,8 @@
 
 \begin{abstract}
 	\input{abstract}
+	\acresetall % resets the acronyms so they will be expanded on first
+	            % occurrence in the text.
 \end{abstract}
 
 \maketitle
