--- a/abstract.tex
+++ b/abstract.tex
@@ -1,18 +1,20 @@
 As electronics devices scale to sub 10 nanometer lengths, the distinction
-between ``device'' and ``leads'' or ``electrodes'' becomes blurred. Here, the
-interaction between device and leads is studied in a simple model of a
-molecular tunnel junction. Using a complex absorbing potential, we are able to
-reproduce the single-particle energy levels of the device region including a
-description of the effects of the ``semi-infinite'' leads. With this approach,
-we are able to model the effect of coupling of a quantum device to leads and to
-systematically study the effect of many-electron interactions between the
-device and lead regions. Varying the device-lead coupling, the effect of
-electron correlation on energy shifts and lifetimes of electronic states on the
-device region is studied by systematically increasing the electron correlation
-or ``many-electron interactions''. To achieve the treatment of the electronic
-interactions, we apply the method of configuration interaction. We find that
-the prediction of the electronic states of a device region is sensitive to both
-the amount of device-lead coupling and to electron correlation. The two effects
-mix in a complicated way implying that detailed treatments of the electronic
-structure of nanoscale devices are required to predict electronic behaviour
-such as charge transport and photoexcitations in a molecular junction.
+between `device' and `leads' or `electrodes' becomes blurred.
+Here, we study a simple model of a molecular tunnel junction, consisting
+of an atomic gold chain partitioned into left and right electrodes, and a
+central `molecule'.
+Using a complex absorbing potential, we are able to reproduce the
+single-particle energy levels of the device region including a description
+of the effects of the ``semi-infinite'' leads.
+We then use the method of configuration interaction to explore the effect
+of correlations on the quasiparticle peaks.
+We find that when excitations on the leads are not included, the devices'
+\ac{HOMO} and \ac{LUMO} quasiparticle peaks when including correlation
+are bracketed by their respective values at the Hartree-Fock (Koopmans)
+and \dscf level of theory.
+Increasing the coupling strength (by decreasing the molecule-lead
+separation) produces wider peaks, corresponding to shorter lifetimes.
+In contrast, including excitations on the leads has significant effects
+on the transmission (and hence the conducticity) of the device. The
+bracketing property no longer holds and both the position and the lifetimes
+of the quasiparticle levels shift significantly.
