add some structure to the text with sub(sub)sections

--- a/body.tex
+++ b/body.tex
@@ -94,6 +94,7 @@ construct the Hamiltonian matrix elements for the CI calculations.
 \subsection{Complex Absorbing Potential}
 \label{subsec:CAP}
 
+\subsubsection{Introduction}
 In defining models for atomic-scale transport junctions, a partitioning
 of the system into semi-infinite electrodes and device region is typically
 performed. The device region is given by an explicit model that includes
@@ -127,6 +128,7 @@ region to electrodes, and serves as the reference point for discussing
 subsequent calculations performed as we introduce correlations into the
 calculations. 
 
+\subsubsection{Electronic structure}
 To treat electron correlations, we apply the method of \ac{CI}. The \ac{CI}
 method is the application of the  Rayleigh-Ritz linear variational
 principle to the calculation of quantum many-electron  energies. Within
@@ -160,6 +162,7 @@ from the energy-dependant self-energy is discussed in detail
 in~\cite{henderson}, and we briefly cover the essential points needed
 for the generation of the \ac{CAP} in the following.
 
+\subsubsection{Derivation of the \ac{CAP}}
 We first consider a system with bare Hamiltonian $\um{H}_0$ in the
 Hartree-Fock approximation, coupled to two electrodes described by known
 left $\um{\Sigma}_L(\omega)$ and right $\um{\Sigma}_R(\omega)$ self-energies.
@@ -227,6 +230,7 @@ generated on a single unit cell of the lead, and then transformed to the
 molecular orbital basis of the device region, which contains a lead unit
 cell on either side.
 
+\subsubsection{Verification of the \ac{CAP}}
 A comparison can be performed for this approximation of a \ac{CAP} 
 against the energy level shifts and broadening
 obtained from explicit calculations using the self-energy. To accomplish
@@ -455,10 +459,10 @@ energies. Hence the quasiparticle energies $\omega_i$, calculated  as the
 difference in energies between many-electron states, are also complex
 valued. It is the energy shift (related to the real part of $\omega_i$)
 and finite lifetime (related to the imaginary part of $\omega_i$) due to
-the opening of the system and as electron correlations are introduced on
-the extended device region which we study for quasiparticles on the
-tunnel junction.
+the opening of the system which we study for quasiparticles on the
+tunnel junction as electron correlations are introduced.
 
+\subsection{Weak coupling}
 We start our analysis by considering the model with weaker coupling
 defined by a 0.45 nm gap between the electrodes and molecular region,
 and initially only including electronic excitations for orbitals localized
@@ -504,6 +508,7 @@ increased description of electron correlations introduces significant
 energy shifts to the resonance peaks but is found not to substantially
 change the broadening relative to the \dscf resonances.
 
+\subsection{Stronger coupling}
 Next, the effect of stronger coupling is considered by reducing the gap
 between the electrodes and molecular regions to 0.40 nm.
 A similar behavor is seen as compared to the weaker coupling case. The
@@ -566,7 +571,8 @@ bracketed by the Koopmans and \dscf values.
 	\label{fig:all40Alumo}
 \end{figure}
 
-Finally, we investigate the effect of including excitations from the
+\subsection{Lead excitations}
+We now investigate the effect of including excitations from the
 explicit electrode region included within the definition of the extended
 device region. Until this point, we have constrained the CI space to only
 \acp{CSF} including excitations from and to orbitals localized on the
@@ -643,6 +649,7 @@ by approximately 1 eV.
 	\label{fig:cidevregion}
 \end{figure}
 
+\subsection{Tunnelling currents}
 Finally, as an illustration of how the changes in transmission curves would
 affect the devices' conductance properties, we calculate the $I-V$ curves
 for the 0.40 nm separated junction in the different levels of theory,
@@ -715,4 +722,4 @@ The junction's electronic structure becomes less like that of a free
 molecule and the QP states and lifetimes are heavily influenced by both
 the amount of correlation and the degree of coupling. The impact of the
 different electronic structure treatments for the junction is highlighted
-current plots of fig.(XX) %~\ref{fig:IVfig}.
+current plots of~\fref{fig:iv}.
