--- a/paper.tex
+++ b/paper.tex
@@ -42,6 +42,10 @@
 
 \input{body}
 
+\ack
+This work was supported by Science Foundation Ireland via grant 06/IN.1/I857.
+IY acknowledges support from an IRCSET postgraduate scholarship. 
+
 \bibliographystyle{iopart-num}
 \bibliography{bibliography}
 
