revert to british spelling

--- a/body.tex
+++ b/body.tex
@@ -511,7 +511,7 @@ change the broadening relative to the \dscf resonances.
 \subsection{Stronger coupling}
 Next, the effect of stronger coupling is considered by reducing the gap
 between the electrodes and molecular regions to 0.40 nm.
-A similar behavor is seen as compared to the weaker coupling case. The
+A similar behaviour is seen as compared to the weaker coupling case. The
 \dscf approximation again shifts the energies of the HOMO and LUMO
 resonances reducing the energy gap, and the state broadening relative to
 the Koopmans resonances is significantly altered with state lifetimes
@@ -605,7 +605,7 @@ renormalization of the energy gap is seen.
 However, as electrode excitations are allowed to couple to the
 molecule-like excitations, the correlated HOMO and LUMO resonance energies
 are no longer bracketed by the HF + self-energy and \dscf peaks.
-There is also a difference in the behavior for the HOMO and LUMO resonances.
+There is also a difference in the behaviour for the HOMO and LUMO resonances.
 For the HOMO peak, the lifetime stays approximately the same as in the
 $Delta$SCF approximation whereas electron correlations broaden the LUMO
 peak from a lifetime of 121 fs from the \dscf approximation to 21
@@ -613,7 +613,7 @@ fs.
 
 As the electrode-molecule distance is reduced to 0.40 nm, the increased
 coupling in combination with the inclusion of electrode excitations
-introduces quantitatively and qualitatively different behavior compared
+introduces quantitatively and qualitatively different behaviour compared
 to all previous cases we have studied. Including the electrode interactions
 with the \dscf approximation as for the 0.45 nm coupling case,
 significantly reduces the QP gap and the magnitude of the correction to
