standardize cross-references with the eref, fref macros

--- a/body.tex
+++ b/body.tex
@@ -61,7 +61,7 @@ electrodes to study how the quasiparticle states evolve.
 The extended device we study is built from a simple atomic chain
 consisting of 68 gold atoms with an interatomic separation of 0.28 nm
 approximating the geometry of gold chains studied experimentally in
-ref.~\cite{nilius2002science} (see figure~\ref{fig:chaincapdevice}).
+ref.~\cite{nilius2002science} (see~\fref{fig:chaincapdevice}).
 Within the explicit chain region, two interatomic spacings are chosen
 larger than all other atomic spacings to define a `molecule' between two
 leads. The explicit left and right leads are each composed of 24 atoms,
@@ -315,8 +315,8 @@ within an accuracy required for our study.
 	\end{center}
 	\caption{Comparison of transmission data obtained using a self-energy
 	(red) with Lorentzian broadened complex eigenvalues of $\um{H}_D + \um{W}$
-	(green) for a model system as described in
-	section~\ref{subsec:modelsystem}, with device-lead gap of 0.45 nm.
+	(green) for a model system as described in~\sref{subsec:modelsystem},
+	with device-lead gap of 0.45 nm.
 	The inset shows a close-up view of the \ac{HOMO}, with the HF \ac{HOMO}
 	shown in blue for reference.
 	}
