added references section

--- a/paper.tex
+++ b/paper.tex
@@ -46,6 +46,7 @@
 This work was supported by Science Foundation Ireland via grant 06/IN.1/I857.
 IY acknowledges support from an IRCSET postgraduate scholarship. 
 
+\section*{References}
 \bibliographystyle{iopart-num}
 \bibliography{bibliography}
 
